--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,12 @@
 .header__lang-link {
     color: white;
-    border: 1px solid red;
     font-size: 24px;
     line-height: 28px;
+    text-decoration: underline;
+    margin-right: 18px;
+}
+
+.header__lang-link:last-of-type {
+    margin-right: 48px;
     text-decoration: none;
 }
