--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,6 @@
 .lead__image {
-width: 984px;
+background-image: url(../../../images/lead-polka.png);
+background-size: cover;
+max-width: 984px;
 height: 615px;
-
 }
