--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,6 +2,7 @@
     font-style: normal;
     font-size: 30px;
     line-height: 36px;
+    font-family: 'Inter';
     text-align: center;
     color: #FFFFFF;
     max-width: 640px;
