--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title {
     margin: auto;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 96px;
     line-height: 100px;
