--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,8 @@
 .intro {
-    
+    max-width: 690px;
+    max-height: 429px;
+    border: 1px red solid;
+    margin: 114px 442px 92px 148px;
+    display: flex;
+    flex-direction: column;
 }
