--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,9 @@
 .lead__subtitle {
+    font-family: Inter;
     font-style: normal;
+    font-weight: normal;
     font-size: 30px;
     line-height: 36px;
-    font-family: 'Inter';
     text-align: center;
     color: #FFFFFF;
     max-width: 640px;
