--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,6 +8,6 @@
     align-items: center;
     max-height: 52px;
     max-width: 1184px;
-    margin: 0 auto;
+    margin: 28px auto 0;
     padding-top: 28px;
 }
