--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,5 @@
 @import url(../blocks/intro/__content/intro__content.css);
 @import url(../blocks/intro/__column-links/intro__column-links.css);
 @import url(../blocks/intro/__column-link/intro__column-link.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
