--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
     max-width: 984px;
-    max-height: 1005px;
-    margin: auto;
-
+    /* max-height: 1005px; */
+    margin: 0 auto;
+    border: 1px red solid;
 }
