--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,8 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/inter.css);
 @import url(../blocks/description/description.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/content/__section/content__section.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
