--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,7 +5,8 @@
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    max-width: 460px;
+    width: 460px;
     margin: 0 0;
+    padding-right: 40px;
     
 }
