--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,12 @@
 .place {
 display: flex;
 flex-wrap: wrap;
-align-items: center;
+/* align-items: center; */
+/* justify-content: center; */
 margin-bottom: 80px;
+max-width: 984px;
+}
+
+.place:last-child {
+    margin-bottom: 0;
 }
