--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -2,5 +2,11 @@
     list-style-type: none;
     padding: 33px 0 0;
     margin: 0;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 18px;
+    color: #FFFFFF;
     
 }
