--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,14 @@
 .lead__title {
-    margin: auto;
-    font-family: 'Inter';
+    
+    font-family: Inter;
     font-style: normal;
+    font-weight: 900;
     font-size: 96px;
     line-height: 100px;
     text-align: center;
     color: #FFFFFF;
+    margin: auto;
     padding-top: 56px;
     max-width: 720px;
 }
+
