--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,10 @@
     margin-left:auto;
     margin-top: auto;
 }
+
+@media (max-width: 1024px) {
+    
+    .intro {
+        width: calc(100% - 48px * 2);
+    }
+}
