--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,9 @@
+
 .place {
 display: flex;
 flex-wrap: wrap;
 /* align-items: center; */
-/* justify-content: center; */
+justify-content: center;
 margin-bottom: 80px;
 max-width: 984px;
 }
@@ -10,3 +11,9 @@ max-width: 984px;
 .place:last-child {
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .place {
+      width: calc(100% - 48px * 2);
+    }
+  }
