--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,3 @@
-
-    
-
 .header {
     background-color: #2A2C2F;
     display: flex;
@@ -8,6 +5,13 @@
     align-items: center;
     max-height: 52px;
     max-width: 1184px;
+    width: calc(100% - 48px * 2);
     margin: 0 auto;
     padding-top: 28px;
 }
+
+/* @media screen and (max-width: 1024px) {
+    .header {
+        width: calc(100% - 24px*2);
+    } 
+} */
