--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,39 @@
 .photo-grid {
     max-width: 1184px;
-    min-height: 671px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    grid-template-rows: repeat(3, 1fr);
-    gap: 16px;
-    margin: 0 auto;
+    margin: auto;
     padding: 92px 0 92px 0;
-    
+    display: grid;
+    gap: 16px;
+    grid-template-columns: repeat(auto-fill, 284px);
+    justify-content: center;
 }
+
+ @media screen and (max-width: 1024px) { 
+    .photo-grid {
+        grid-template-columns: repeat(auto-fill, 300px);
+    } 
+  } 
+
+  
+  /* @media (max-width: 768px) { 
+    .photo-grid {
+      grid-template-columns: repeat(auto-fill, 352px);
+      padding: 97px 0 102px 0;
+    } 
+  }
+  
+  @media (max-width: 425px) { 
+    .photo-grid {
+      grid-template-columns: repeat(auto-fill, 343px);
+      grid-row-gap: 8px;
+      padding: 64px 0 64px 0;
+    } 
+  }
+  
+  @media (max-width: 400px) { 
+    .photo-grid {
+      grid-template-columns: repeat(auto-fill, 288px);
+      grid-row-gap: 8px;
+      padding: 64px 0 64px 0;
+    } 
+  }  */
