--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,17 @@
 .place__image {
     max-width: 460px;
+    height: 460px;
     padding-top: 48px;
     padding-right: 40px;
 }
+
+@media screen and (max-width: 1024px) {
+    .place__image {
+        max-width: 440px;
+        height: 440px;
+        padding-top: 48px;
+        padding-right: 32px;
+        background-color: royalblue;
+    }
+}
+
