--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,8 +5,18 @@
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    width: 460px;
+    max-width: 460px;
     margin: 0 0;
     padding-right: 40px;
     
 }
+
+@media screen and (max-width: 1024px) {
+    .place__title {
+        max-width: 440px;
+        padding-right: 32px;
+    }
+}
+
+
+
