--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,12 +3,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-height: 52px;
+    min-height: 52px;
     max-width: 1184px;
     width: calc(100% - 48px * 2);
     margin: 0 auto;
     padding-top: 28px;
 }
+
+@media (max-width: 1024px) { 
+    .header {
+      padding: 30px 48px 48px 48px;
+    } 
+  }
+  
+  @media (max-width: 768px) { 
+    .header {
+      padding: 30px 24px 48px 24px;
+    } 
+  }
+  
+  @media (max-width: 375px) { 
+    .header {
+      padding: 30px 16px 48px 16px;
+    } 
+  }
 
 /* @media screen and (max-width: 1024px) {
     .header {
