--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,8 +4,10 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 163%;
+    /* or 26px */
     color: #FFFFFF;
-    padding-top: 40px;
-    margin: 0;
     max-width: 690px;
+    margin: 0;
+    padding-top: 40px;
+
 }
