--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,12 @@
 .lead__caption {
     font-style: normal;
     font-weight: normal;
+    text-transform: uppercase;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 0.15em;
     font-family: 'Inter';
     color: #FFFFFF;
     margin: 0;
-    padding-top: 4px;
+    padding-top: 8px;
 }
