--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -12,3 +12,10 @@
     max-width: 720px;
 }
 
+@media (max-width: 768px) { 
+    .lead__title {
+      font-size: 40px;
+      line-height: 44px;
+    } 
+  }
+
