--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -11,8 +11,10 @@
  @media screen and (max-width: 1024px) { 
     .photo-grid {
         grid-template-columns: repeat(auto-fill, 300px);
+        gap: 14px;
     } 
   } 
+
 
   
   /* @media (max-width: 768px) { 
