--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,4 @@
-.place__image {
+/* .place__image {
     max-width: 460px;
     height: 460px;
     padding-top: 48px;
@@ -13,5 +13,10 @@
         padding-right: 32px;
         background-color: royalblue;
     }
-}
+} */
 
+.place__image {
+    max-width: 460px;
+    height: 460px;
+    margin: 60px 0 0 0;
+}
