--- a/blocks/place/__paragraph-all/place__paragraph-all.css
+++ b/blocks/place/__paragraph-all/place__paragraph-all.css
@@ -1,5 +1,12 @@
-.place__paragraph-all {
-    max-width: 484px;
+/*.place__paragraph-all {
+    /* max-width: 484px; 
+    flex-basis: 100%;
     margin-top: 48px;
+    max-width: 100%;
+}*/
+
+.place__paragraphs {
+    max-width: 484px;
+    margin: 60px 0 0 40px;
 }
 
