--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph {
+/* .place__paragraph {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -8,4 +8,13 @@
     min-width: 484px;
     margin: 0;
     margin: 0 0 26px;
+} */
+
+.place__paragraph {
+    margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    font-family: 'Inter', Arial, sans-serif;
 }
