--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,11 +1,12 @@
-.place__title {
+/*.place__title {
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    max-width: 460px;
+    /* max-width: 460px; 
+    flex-basis: 100%;
     margin: 0 0;
     padding-right: 40px;
     
@@ -17,6 +18,16 @@
         padding-right: 32px;
     }
 }
+*/
 
-
-
+.place__title {
+    width: 460px;
+    margin: 0;
+    padding: 0 43px 0 0;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 65px;
+    font-family: 'Inter';
+    color: #FFFFFF;
+}
