--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,28 +1,13 @@
-/*.place {
-    display: flex;
-    flex-wrap: wrap;
-    /* align-items: center; */
-    /* justify-content: center; 
-    margin-bottom: 80px;
-    /* max-width: 984px; 
-    max-width: 100%;
+.place {
+  max-width: 984px;
+  margin-bottom: 72px;
+  display: flex;
+  justify-content: center;
+  /* align-items: normal; */
+  flex-wrap: wrap;
 }
 
 .place:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 1024px) {
-    .place {
-      width: calc(100% - 48px * 2);
-    }
-  }
-*/
-
-.place {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 984px;
-    margin-bottom: 80px;
-}
