--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,10 +10,28 @@
 
  @media screen and (max-width: 1024px) { 
     .photo-grid {
-        grid-template-columns: repeat(auto-fill, 300px);
-        gap: 14px;
+      grid-template-columns: repeat(auto-fill, 300px);
+      gap: 14px;
     } 
-  } 
+  }
+
+  @media screen and (max-width: 768px) {
+    .photo-grid {
+      grid-template-columns: repeat(auto-fill, 352px);
+      padding: 88px 0;
+      gap: 16px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .photo-grid {
+      grid-template-columns: repeat(auto-fill, 288px);
+      grid-row-gap: 12px;
+      padding: 64px 0;
+    }
+  }
+
+
 
 
   
