--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,4 @@
-.cover__title {
+/* .cover__title {
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
@@ -9,4 +9,30 @@
     max-width: 560px;
     min-height: 152px;
     margin: 0 auto;
-}
+} */
+
+.cover__title {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 106%;
+    text-align: center;
+    color: #FFFFFF;
+    max-width: 560px;
+    text-align: center;
+    margin: 0 0 32px 0;
+    position: relative;
+    z-index: 1;
+
+
+  }
+
+  @media (max-width: 425px) {
+    .cover__title {
+      font-size: 32px;
+      line-height: 109%;
+      max-width: 250px;
+      margin-bottom: 16px;
+    }
+  }
