--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,4 @@
-.cover__subtitle {
+/* .cover__subtitle {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -9,4 +9,26 @@
     max-width: 360px;
     min-height: 66px;
     margin: 32px auto 0;
-}
+} */
+
+.cover__subtitle {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 122%;
+    text-align: center;
+    color: #FFFFFF;
+    max-width: 360px;
+    margin: 0;
+    position: relative;
+    z-index: 1;
+  }
+
+  @media (max-width: 767px) {
+    .cover__subtitle {
+      font-size: 14px;
+      line-height: 114%;
+      max-width: 288px;
+    }
+  }
