--- a/blocks/places/__paragraph-all/place__paragraph-all.css
+++ b/blocks/places/__paragraph-all/place__paragraph-all.css
@@ -1,7 +1,8 @@
 
-.place__paragraphs {
+.place__paragraph-all {
   max-width: 484px;
-  margin: 60px 0 0 40px;
+  margin-top: 48px;
+  margin-left: 40px;
 }
 
 @media (max-width: 1024px) { 
