--- a/blocks/places/__paragraph/place__paragraph.css
+++ b/blocks/places/__paragraph/place__paragraph.css
@@ -1,15 +1,18 @@
 
 .place__paragraph {
-  margin: 0;
+
+  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 30px;
-  font-family: 'Inter', Arial, sans-serif;
+  line-height: 163%;
+  /* or 29px */
+  color: #FFFFFF;
+  margin: 0; 
 }
 
 .place__paragraph:nth-child(2n) {
-  margin-top: 36px;
+  margin-top: 26px;
 }
 
 @media (max-width: 768px) { 
