--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -1,15 +1,13 @@
-
-
 .place__title {
-  width: 457px;
-  /*margin: 0 auto 0 0;*/
-  margin: 0;
-  padding: 0 43px 0 0;
+  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 65px;
-  font-family: 'Inter', Arial, sans-serif;
+  line-height: 76px;
+  color: #FFFFFF;
+  width: 460px;
+  margin: 0;
+  padding-right: 40px;
 }
 
 @media (max-width: 1024px) { 
