--- a/blocks/places/__url-heading/place__url-heading.css
+++ b/blocks/places/__url-heading/place__url-heading.css
@@ -1,10 +1,11 @@
 .place__url-heading {
-  margin: 0;
+  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 12px;
   letter-spacing: 0.2em;
   color: #AAAAAA;
-  font-family: 'Inter', Arial, sans-serif;
+  margin: 0;
 }
+
