--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,5 @@
 .footer__copyright {
+
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -6,4 +7,16 @@
     line-height: 16px;
     text-align: right;
     color: #FFFFFF;
-}
+    max-width: 100%;
+    padding-top: 10px;
+    margin: 0;
+
+  }
+  
+  @media (max-width: 700px) { 
+    .footer__copyright {
+      padding-top: 48px;
+      padding-left: 0;
+      align-self: flex-start;
+    } 
+  }
