--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,23 @@
-.footer__links {
+/* .footer__links {
 display: flex;
 justify-content: center;
 align-items: center;
 list-style-type: none;
 padding: 0;
-}
+
+} */
+
+.footer__links {
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
+    max-width: 1184px;
+    display: flex;
+  }
+  
+  @media (max-width: 700px) { 
+    .footer__links {    
+      flex-direction: column;
+      padding-left: 0;
+    } 
+  }
