--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,4 +11,19 @@
     .footer {
         max-width: 928px;
     }
-}
+} */
+
+.footer {
+    max-width: 1184px;
+    margin: auto;
+    padding: 92px 48px 24px 48px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  @media (max-width: 700px) { 
+    .footer {    
+      flex-direction: column;
+    } 
+  }
+  
