--- a/blocks/places/__website/place__website.css
+++ b/blocks/places/__website/place__website.css
@@ -9,7 +9,7 @@
 @media (max-width: 1024px) { 
   .place__website {
     width: 456px;
-    margin: 0 24px 0 28px;  
+    margin: 0 0 0 32px;  
   } 
 }
 
