--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,9 +4,9 @@
     margin: auto;
 }
 
-/* @media (max-width: 1024px) {
-    
+@media screen and (max-width: 1024px) {
     .intro {
-        width: calc(100% - 48px * 2);
+        padding: 92px 48px 0 48px;
     }
-} */
+}
+
