--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,3 +11,10 @@
   margin-bottom: 92px;
 }
 
+@media screen and (max-width: 1024px) { 
+  .place {
+    padding-left: 28px;
+    margin-bottom: 80px;
+  } 
+}
+
