--- a/blocks/places/__image/place__image.css
+++ b/blocks/places/__image/place__image.css
@@ -25,21 +25,13 @@
   margin: 60px 0 0 0;
 }
 
-@media (max-width: 1024px) { 
+@media screen and (max-width: 1024px) { 
   .place__image {
     max-width: 440px;
     height: 440px;
-	  margin: 32px 0 24px 0;
+	  margin: 48px 0 0 0;
   } 
 }
-
-/*@media (max-width: 768px) { 
-  .place__image {
-    max-width: 340px;
-    height: 340px;
-	  margin: 32px 0 24px 24px;
-  } 
-}*/
 
 @media (min-width: 768px) and (max-width: 1023px) { 
   .place__image {
