--- a/blocks/places/__paragraph-all/place__paragraph-all.css
+++ b/blocks/places/__paragraph-all/place__paragraph-all.css
@@ -5,16 +5,23 @@
   margin-left: 40px;
 }
 
-@media (max-width: 1024px) { 
+@media screen and (max-width: 1024px) { 
   .place__paragraph-all {
     max-width: 456px;
 	  margin: 48px 28px 0 32px;
   } 
 }
 
-@media (min-width: 768px) and (max-width: 1023px) { 
+@media screen and (max-width: 1023px) { 
   .place__paragraph-all {
     max-width: 340px;
+	  margin: 32px 24px 0 24px;
+  } 
+}
+
+@media screen and (max-width: 768px) { 
+  .place__paragraph-all {
+    max-width: 352px;
 	  margin: 32px 24px 0 24px;
   } 
 }
