--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,4 +1,4 @@
-.cover__overlay {
+/* .cover__overlay {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,4 +7,4 @@
     height: 100%;
     background-color: #2a2c2f36;
     
-}
+} */
