--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -20,6 +20,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  @media screen and (max-width: 768px) { 
+    .footer{
+        padding: 88px 24px 24px 24px;
+    }
   
   @media (max-width: 700px) { 
     .footer {    
