--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -16,11 +16,11 @@
     } 
   }
   
-  @media screen and (max-width: 768px) { 
+  /* @media screen and (max-width: 768px) { 
     .header {
       padding: 30px 24px 48px 24px;
     } 
-  }
+  } */
   
   @media screen and (max-width: 375px) { 
     .header {
