--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,3 +10,9 @@
     margin: 0;
     padding-top: 8px;
 }
+
+@media screen and (max-width: 1024px) {
+    .lead__caption {
+        padding: 8px 0 0 24px;
+    }
+}
