--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,9 +4,16 @@
     /* margin-bottom: 92px; */
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
     .lead {
         width: calc(100% - 48px*2);
     } 
 }
+
+@media screen and (max-width: 768px) {
+    .lead {
+        width: 100%;
+    }
+} */
+
 
