--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -10,20 +10,26 @@
   padding-right: 40px;
 }
 
-@media (max-width: 1024px) { 
+@media screen and (max-width: 1024px) { 
   .place__title {
     max-width: 440px;
-    padding: 0 0 0 0;
+    padding: 0;
   } 
 }
 
 
-@media (min-width: 768px) and (max-width: 1023px) { 
+@media screen and (max-width: 768px) { 
   .place__title {
 	  width: 340px;  
     font-size: 42px;
     line-height: 46px;
-    padding: 0 0 0 24px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 42px;
+    line-height: 46px;
+    color: #FFFFFF;
+    padding-left: 24px;
   } 
 }
 
