--- a/blocks/header/__menu/header__menu.css
+++ b/blocks/header/__menu/header__menu.css
@@ -1,3 +1,10 @@
 .header__menu {
     padding-top: 13px;
 }
+
+@media (max-width: 320px) {
+    .header__menu {
+        font-size: 18px;
+        line-height: 20px;
+    }
+}
