--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -13,7 +13,14 @@
 
   }
   
-   
+  @media screen and (max-width: 700px) {
+    .footer__copyright {
+        padding-top: 48px;
+        padding-left: 0;
+        align-self: flex-start;
+    }
+  }
+  
   
 
  
