--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,16 +14,16 @@
     opacity: .8;
   }
   
-  @media (max-width: 900px) { 
+  @media screen and (max-width: 900px) { 
     .footer__link{
       font-size: 16px;
       line-height: 27px;
     } 
   }
   
-  @media (max-width: 375px) { 
+  @media screen and (max-width: 320px) { 
     .footer__link{
-      font-size: 24px;
-      line-height: 41px;
+        font-size: 24px;
+        line-height: 24px;
     } 
   }
