--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,17 +1,3 @@
-/* .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1184px;
-    margin: 0 auto;
-    padding: 92px 48px 28px;
-}
-
-@media screen and (max-width: 1024px) {
-    .footer {
-        max-width: 928px;
-    }
-} */
 
 .footer {
     max-width: 1184px;
@@ -23,12 +9,20 @@
 
   @media screen and (max-width: 768px) { 
     .footer{
-        padding: 88px 24px 24px 24px;
+        padding: 64px 0 48px 16px;
+        font-size: 24px;
+        line-height: 24px;
     }
+  }
   
-  @media (max-width: 700px) { 
+  @media screen and (max-width: 700px) { 
     .footer {    
       flex-direction: column;
     } 
   }
-  
+
+  @media screen and (max-width: 320px) { 
+    .footer{
+        padding: 48px 16px 16px;
+    }
+  }
