--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -16,20 +16,10 @@
     } 
   }
   
-  /* @media screen and (max-width: 768px) { 
+  @media (max-width: 425px) {
     .header {
-      padding: 30px 24px 48px 24px;
-    } 
-  } */
-  
-  @media screen and (max-width: 375px) { 
-    .header {
-      padding: 30px 16px 48px 16px;
-    } 
+      width: calc(100% - 16px * 2);
+      padding-top: 16px;
+    }
   }
-
-/* @media screen and (max-width: 1024px) {
-    .header {
-        width: calc(100% - 24px*2);
-    } 
-} */
+  
