--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -10,3 +10,9 @@
     color: #FFFFFF;
     
 }
+
+@media screen and (max-width: 320px) {
+    .intro__content {
+        padding: 34px 0 0;
+    }
+}
