--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,8 +9,17 @@
    
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .intro__title {
-       
+        font-size: 54px;
+        line-height: 58px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
+
