--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,15 +1,30 @@
 .lead__title {
-    
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
-    color: #FFFFFF;
-    margin: auto;
-    padding-top: 56px;
-    max-width: 720px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: auto;
+  padding-top: 56px;
+  max-width: 720px;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    padding-top: 48px;
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
+
 
 
