--- a/blocks/places/__image/place__image.css
+++ b/blocks/places/__image/place__image.css
@@ -33,7 +33,7 @@
   } 
 }
 
-@media (min-width: 768px) and (max-width: 1023px) { 
+@media screen and (max-width: 1023px) { 
   .place__image {
     max-width: 340px;
     height: 340px;
@@ -41,7 +41,7 @@
   } 
 }
 
-@media (max-width: 450px) { 
+@media screen and (max-width: 460px) { 
   .place__image {
     max-width: 100%;
     height: auto;
