--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,12 +1,3 @@
-/* .footer__links {
-display: flex;
-justify-content: center;
-align-items: center;
-list-style-type: none;
-padding: 0;
-
-} */
-
 .footer__links {
     margin: 0;
     list-style-type: none;
@@ -15,7 +6,7 @@ padding: 0;
     display: flex;
   }
   
-  @media (max-width: 700px) { 
+  @media screen and (max-width: 700px) { 
     .footer__links {    
       flex-direction: column;
       padding-left: 0;
