--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,11 +15,9 @@
       width: calc(100% - 24px * 2);
     } 
   }
-  
-  @media (max-width: 425px) {
+
+  @media screen and (max-width: 320px) { 
     .header {
-      width: calc(100% - 16px * 2);
-      padding-top: 16px;
-    }
+      padding: 30px 16px 48px 16px;
+    } 
   }
-  
