--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-    font-family: Inter;
+    font-family: "Inter", "Arial",sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -12,10 +12,20 @@
     z-index: 1;
   }
 
-  @media (max-width: 767px) {
+  @media screen and (max-width: 768px) {
+    .cover__subtitle {
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 360px;
+    }
+  }
+  @media screen and (max-width: 450px) {
     .cover__subtitle {
       font-size: 14px;
-      line-height: 114%;
+      line-height: 16px;
       max-width: 288px;
     }
   }
+
+      
+    
