--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,7 +2,7 @@
     max-width: 94px;
     margin-right: 18px;
     text-decoration: none;
-    font-family: Inter;
+    font-family: "Inter", "Arial",sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
