--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,13 +3,14 @@
     font-size: 24px;
     line-height: 28px;
     text-decoration: underline;
-    margin-right: 15px;
-    font-family: 'Inter';
+    margin-right: 18px;
+    font-family: "Inter", "Arial",sans-serif;
+    text-decoration: none;
 }
 
 .header__lang-link:last-of-type {
     margin-right: 0;
-    text-decoration: none;
+    
 }
 
 .header__lang-link:hover {
