--- a/blocks/intro/__column-link/intro__column-link.css
+++ b/blocks/intro/__column-link/intro__column-link.css
@@ -1,6 +1,6 @@
 .intro__column-link {
     text-decoration: none;
-    font-family: Inter;
+    font-family: "Inter", "Arial",sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
