--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,7 +5,7 @@
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 0.15em;
-    font-family: 'Inter';
+    font-family: "Inter", "Arial",sans-serif;
     color: #FFFFFF;
     margin: 0;
     padding-top: 8px;
