--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,13 +23,13 @@
     }
   }
 
-  @media screen and (max-width: 400px) {
+  /* @media screen and (max-width: 400px) {
     .photo-grid {
       grid-template-columns: repeat(auto-fill, 288px);
       grid-row-gap: 12px;
       padding: 64px 0;
     }
-  }
+  } */
 
   @media screen and (max-width: 320px) {
     .photo-grid {
