--- a/blocks/intro/__column-links/intro__column-links.css
+++ b/blocks/intro/__column-links/intro__column-links.css
@@ -1,3 +1,9 @@
 .intro__column-links {
+    font-family: Inter;
+    font-style: normal;
     
+    font-size: 12px;
+    line-height: 18px;
+    /* or 150% */
+    color: #FFFFFF;  
 }
