--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -2,12 +2,7 @@
     list-style-type: none;
     padding: 33px 0 0;
     margin: 0;
-    font-family: "Inter", "Arial",sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 18px;
-    color: #FFFFFF;
+    max-width: 690px;
     
 }
 
