--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,5 +4,11 @@
     /* margin-bottom: 92px; */
 }
 
+@media screen and (max-width: 1024px) {
+    .lead {
+        max-width: 928px;
+    }
+}
+
 
 
