--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,6 +18,7 @@
 
   @media screen and (max-width: 320px) { 
     .header {
-      padding: 30px 16px 48px 16px;
+      padding: 16px 16px 48px;
+      
     } 
   }
