--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,16 +11,17 @@
   max-width: 720px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__title {
-    padding-top: 48px;
+    padding-top: 0;
   }
 }
 
