--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -18,6 +18,14 @@
         align-self: flex-start;
     }
   }
+
+  @media screen and (max-width: 320px) {
+    .footer__copyright {
+        padding-top: 16px;
+        padding-bottom: 32px;
+
+    }
+  }
   
   
 
