--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,6 +11,12 @@
     margin: 0;
   }
   
+  @media screen and (max-width: 768px) {
+    .footer__copyright {
+      padding-right: 36px;
+    }
+  }
+
   @media screen and (max-width: 700px) {
     .footer__copyright {
         padding-top: 48px;
