--- a/blocks/intro/__column-links/intro__column-links.css
+++ b/blocks/intro/__column-links/intro__column-links.css
@@ -1,5 +1,5 @@
 .intro__column-links {
-    font-family: Inter;
+    font-family: "Inter", "Arial",sans-serif;
     font-style: normal;
     
     font-size: 12px;
